feat：使用模板方法模式实现代码沙箱